
Release 0.4

   o Fix occasional crash reported by Ketan Gajiwala on pressing CR in
     the graphics window after a refiement.

   o Cootaneer [slim-line Buccaneer in Coot]

   o Fix Shelx lst file reader when handling atoms with Alt Confs
     [Christian Stegmann]

   o Select residues (for new molecule) by sphere [Joel Bard]

   o Multiple model ligand overlaying [Bob Nolte]

   o Temperature factor variance validation now works for SHELXL
     molecules [GMS, JED]

   o Ca Zone->Mainchain no longer spews warnings

   o Planar peptide restraints are ON by default now [Phil Evans]

   o Omega Distortion graph now updates on Accept Refine Zone

   o CCP4i aliases are also added to the Project Dir options in the
     file selector [Ingo Korndoerfer]

   o Moving the Rotate-Translate Y slider in the positve direction
     moves the fragment in the +Y direction on the screen (instead of 
     downwards) [Steven Sheriff]

   o Fix typo in transform-map-using-lsq-matrix [Nick Furnham]

   o U-matrix correctly output to shelx .res file [Annette Langkilde]


    -------------------------------------------------------
    -------------------- Old Releases ---------------------
    -------------------------------------------------------


Release 0.3.3 "The Early Bird Catches the Bugs"

  o Tortuous and seemingly broken "Display Frame" code reverted [RR
    will be back to being nausiated]

  o Filter button fixed for file selections

---

Release 0.3.2 "Don't Bet on the River"

  o Fix crash due to rigid body refinement of atoms with zero
    occupancy

  o Add further SHELX support: .res files are split and unsplit on
    reading/writing.  Solve the ^M problem like SHELX does. SHELXL
    refinement interface improved [GMS]

  o Fix crash when applying NCS edits [Michael Url]

  o Fix problems of incorrect actions on pressing NCS buttons 
    [Christopher Rife]

  o Fix (potential?) crash on finding blobs and waters [Kevin Cowtan]
